the paper final version

--- a/src/application/Lan_zh_CN.properties
+++ b/src/application/Lan_zh_CN.properties
@@ -10,7 +10,7 @@ menu.file.newPrj = \u65B0\u5EFA\u5DE5\u7A0B
 menu.file.newModule = \u65B0\u5EFA\u6A21\u5757
 menu.file.newFunc= \u65B0\u5EFA\u529F\u80FD
 menu.file.openPrj= \u6253\u5F00\u5DE5\u7A0B
-menu.file.savePrj= \u4FDD\u5B58
+menu.file.savePrj= \u5BFC\u51FA\u6587\u4EF6
 ##\u7F16\u8F91\u83DC\u5355
 menu.main.edit = \u7F16\u8F91
 menu.edit.cut = \u526A\u5207
